Finish manual replacement implementation

--- a/Notebooks/Manual_Segment_Extraction.ipynb
+++ b/Notebooks/Manual_Segment_Extraction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[185 rows x 185 columns]"
       ]
      },
-     "execution_count": 399,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -1633,70 +1633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Zeit', 'fuer', 'einen', 'Kanzlerwechsel', 'Wien', ',', '27.', 'September', '2013', '(', 'OeVP-PD', ')', '\"', 'Aus', 'zahlreichen', 'Gespraechen', 'und', 'Begegnungen', 'weiss', 'ich', ',', 'dass', 'viele', 'Menschen', 'nicht', 'mit', 'allem', 'einverstanden', 'waren', ',', 'was', 'wir', 'in', 'den', 'vergangenen', 'Jahren', 'in', 'Wien', 'erlebt', 'haben', '.', 'Aber', 'bei', 'der', 'Wahl', 'am', 'kommenden', 'Sonntag', 'geht', 'es', 'nicht', 'um', 'die', 'Vergangenheit', '.', 'Am', 'kommenden', 'Sonntag', 'entscheiden', 'wir', 'ueber', 'die', 'Zukunft', 'und', 'vor', 'allem', 'darueber', ',', 'wer', 'Oesterreich', 'in', 'den', 'kommenden', 'fuenf', 'Jahren', 'fuehren', 'soll', 'und', 'welche', 'Parteien', 'der', 'Bundesregierung', 'angehoeren', '.', 'Wer', 'die', 'OeVP', 'in', 'der', 'Regierung', 'will', ',', 'muss', 'sie', 'auch', 'waehlen', '.', 'Es', 'braucht', 'einen', 'Kanzlerwechsel', '.', 'Es', 'braucht', 'einen', 'Kanzler', 'Michael', 'Spindelegger', '\"', ',', 'betont', 'Oberoesterreichs', 'Landeshauptmann', 'Josef', 'Puehringer', '.', '*', '*', '*', '*', '\"', 'Gerade', 'uns', 'in', 'Oberoesterreich', 'kann', 'nicht', 'egal', 'sein', ',', 'wer', 'in', 'Wien', 'das', 'Sagen', 'hat', ',', 'denn', 'ueber', 'viele', 'fuer', 'uns', 'in', 'Oberoesterreich', 'wichtige', 'Themen', 'und', 'Projekte', 'wie', 'zum', 'Beispiel', 'die', 'Schaffung', 'von', 'Arbeitsplaetzen', 'und', 'die', 'Staerkung', 'des', 'Wirtschaftsstandortes', 'Oberoesterreich', ',', 'die', 'Umsetzung', 'wichtiger', 'Strassen-', 'und', 'Schienenprojekte', ',', 'den', 'Ausbau', 'des', 'Hochwasserschutzes', ',', 'den', 'Kampf', 'gegen', 'Atomkraftwerke', 'oder', 'die', 'Medizin-Fakultaet', 'fuer', 'Oberoesterreich', 'wird', 'im', 'Bund', 'entschieden', '\"', ',', 'so', 'Josef', 'Puehringer', '.', 'Es', 'geht', 'deshalb', 'am', '29.', 'September', 'auch', 'um', 'die', 'oberoesterreichischen', 'Interessen', '.', '\"', 'Damit', 'wir', 'die', 'oberoesterreichischen', 'Anliegen', 'umsetzen', 'und', 'durchsetzen', 'koennen', ',', 'brauchen', 'wir', 'nicht', 'nur', 'starke', 'oberoesterreichische', 'Vertreter', 'im', 'Parlament', ',', 'sondern', 'auch', 'jemanden', 'an', 'der', 'Spitze', ',', 'der', 'sich', 'fuer', 'die', 'Interessen', 'der', 'Bundeslaender', 'und', 'Regionen', 'einsetzt', '.', 'Ich', 'arbeite', 'schon', 'lange', 'mit', 'Michael', 'Spindelegger', 'zusammen', '.', 'Er', 'ist', 'verantwortungsvoll', 'und', 'korrekt', '.', 'Er', 'steht', 'fuer', 'Stabilitaet', 'und', 'Verlaesslichkeit', 'und', 'er', 'hat', 'bereits', 'mehrfach', 'unter', 'Beweis', 'gestellt', ',', 'dass', 'wir', 'uns', 'auf', 'ihn', 'verlassen', 'koennen', ',', 'wenn', 'es', 'um', 'die', 'Anliegen', 'Oberoesterreichs', 'geht', '.', '\"']\n",
-      "['Michael', 'Spindelegger', 'ist', 'die', 'beste']\n",
-      "Text-ID: at_pr_el_13_020021.txt\n",
-      "\n",
-      "Press Release from Party: ÖVP\n",
-      "\n",
-      "country      = at\n",
-      "partylabel   = övp\n",
-      "partytype    = all\n",
-      "date         = 27.09.13\n",
-      "\n",
-      "Pühringer: Michael Spindelegger ist die beste Wahl für  Oberösterreich und Österreich\n",
-      "-------------------------------------------------------------------------------------\n",
-      "\n",
-      "Zeit für einen Kanzlerwechsel\n",
-      "    Wien, 27. September 2013 (ÖVP-PD) \"Aus zahlreichen Gesprächen \n",
-      "und Begegnungen weiß ich, dass viele Menschen nicht mit allem \n",
-      "einverstanden waren, was wir in den vergangenen Jahren in Wien \n",
-      "erlebt haben. Aber bei der Wahl am kommenden Sonntag geht es nicht \n",
-      "um die Vergangenheit. Am kommenden Sonntag entscheiden wir über die \n",
-      "Zukunft und vor allem darüber, wer Österreich in den kommenden fünf \n",
-      "Jahren führen soll und welche Parteien der Bundesregierung \n",
-      "angehören. Wer die ÖVP in der Regierung will, muss sie auch wählen. \n",
-      "Es braucht einen Kanzlerwechsel. Es braucht einen Kanzler Michael \n",
-      "Spindelegger\", betont Oberösterreichs Landeshauptmann Josef \n",
-      "Pühringer. ****\n",
-      "    \"Gerade uns in Oberösterreich kann nicht egal sein, wer in Wien \n",
-      "das Sagen hat, denn über viele für uns in Oberösterreich wichtige \n",
-      "Themen und Projekte  wie zum Beispiel die Schaffung von \n",
-      "Arbeitsplätzen und die Stärkung des Wirtschaftsstandortes \n",
-      "Oberösterreich, die Umsetzung wichtiger Straßen- und \n",
-      "Schienenprojekte, den Ausbau des Hochwasserschutzes, den Kampf \n",
-      "gegen Atomkraftwerke oder die Medizin-Fakultät für Oberösterreich  \n",
-      "wird im Bund entschieden\", so Josef Pühringer. Es geht deshalb am \n",
-      "29. September auch um die oberösterreichischen Interessen. \"Damit \n",
-      "wir die oberösterreichischen Anliegen umsetzen und durchsetzen \n",
-      "können, brauchen wir nicht nur starke oberösterreichische Vertreter \n",
-      "im Parlament, sondern auch jemanden an der Spitze, der sich für die \n",
-      "Interessen der Bundesländer und Regionen einsetzt. Ich arbeite \n",
-      "schon lange mit Michael Spindelegger zusammen. Er ist \n",
-      "verantwortungsvoll und korrekt. Er steht für Stabilität und \n",
-      "Verlässlichkeit und er hat bereits mehrfach unter Beweis gestellt, \n",
-      "dass wir uns auf ihn verlassen können, wenn es um die Anliegen \n",
-      "Oberösterreichs geht.\"\n",
-      "\n",
-      "\n",
-      "\n",
-      "Michael Spindelegger ist die beste Wahl fuer  Oberoesterreich und Oesterreich\n",
-      "0.0\n"
+      "ch werde dafuer sorgen\n",
+      "1.0\n"
      ]
     }
    ],
    "source": [
-    "x=15\n",
-    "print(non.loc[x].doc_tokens)\n",
-    "print(non.loc[x].wording_tokens)\n",
-    "print(non.loc[x].text)\n",
+    "x=5\n",
+    "#print(non.loc[x].doc_tokens)\n",
+    "#print(non.loc[x].wording_tokens)\n",
+    "#print(non.loc[x].text)\n",
     "print(non.loc[x].Wording)\n",
     "print(non.loc[x].POPULIST)"
    ]
