--- a/Notebooks/Manual_Segment_Extraction.ipynb
+++ b/Notebooks/Manual_Segment_Extraction.ipynb
@@ -494,7 +494,7 @@
    "outputs": [],
    "source": [
     "# Remove rows from list where no manual retrievement possible\n",
-    "drop_list = [0,9,14,15]\n",
+    "drop_list = [0,5,9,14,15]\n",
     "non = non.loc[~non.index.isin(drop_list)]"
    ]
   },
@@ -1619,14 +1619,14 @@
     "    [2, 'Volksgruppen schuetzen Minderheiten foerdern'], \n",
     "    [3, 'BZOe-Forderungen'], \n",
     "    [4, 'Elite und Begabung'],\n",
-    "    [5, 'Ich werde dafuer sorgen'],\n",
     "    [6, 'Die Politik greift'],\n",
     "    [7, 'Wir fordern: - Eine wirksame'],\n",
     "    [8, 'NGO fuer'],\n",
     "    [10, 'SPOe-Vorsitzenden, Bundeskanzler WernerFaymann'],\n",
     "    [11, 'Schwarz-Blau'],\n",
     "    [12, 'Wir sind die Lobby der Jugendlichen'],\n",
-    "    [13, 'In Sachen ELGA']\n",
+    "    [13, 'In Sachen ELGA'],\n",
+    "    \n",
     "]\n",
     "  "
    ]
