--- a/Notebooks/Manual_Segment_Extraction.ipynb
+++ b/Notebooks/Manual_Segment_Extraction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spacy.pipeline.sentencizer.Sentencizer at 0x1a7471fde80>"
+       "<spacy.pipeline.sentencizer.Sentencizer at 0x14edd5080c0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "358"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(non)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split dataset between none_match with subword retrieved matching and no-match\n",
+    "non_sub = non.loc[non.match_count > 0]\n",
+    "non = non.loc[non.match_count == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -60,15 +91,13 @@
        "218"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Split dataset between none_match with subword retrieved matching and no-match\n",
-    "non_sub = non.loc[non.match_count > 0]\n",
-    "non = non.loc[non.match_count == 0]"
+    "len(non)"
    ]
   },
   {
