--- a/Notebooks/Figure_Generator.ipynb
+++ b/Notebooks/Figure_Generator.ipynb
@@ -2659,7 +2659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8b48422",
+   "id": "9dff0446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2671,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "646745be",
    "metadata": {},
    "outputs": [],
@@ -3085,7 +3085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c35703",
+   "id": "1beb9727",
    "metadata": {},
    "source": [
     "### Number of Texts per Country & Party (BT_DF)"
@@ -3093,28 +3093,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "da1839a9",
+   "execution_count": 11,
+   "id": "16791949",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt_df = pd.read_csv('C:/Users/dschw/Documents/GitHub/Thesis/Output/BT_corpus.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bf8299bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop rows without speaker_id\n",
-    "bt_df.dropna(subset=[\"spr_id\"], inplace=True)"
+    "bt_df = pd.read_csv('C:/Users/dschw/Documents/GitHub/Thesis/Output/BT_corpus_prep.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "262dfb44",
+   "id": "e078df22",
    "metadata": {},
    "source": [
     "### Variable Overview BT_DF"
@@ -3122,14 +3111,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "70a5abff",
+   "execution_count": 12,
+   "id": "bab934ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Unnamed: 0',\n",
+       " 'Unnamed: 0.1',\n",
        " 'text_id',\n",
        " 'text_subid',\n",
        " 'text_date',\n",
@@ -3144,10 +3134,11 @@
        " 'spr_role_full',\n",
        " 'spr_role_short',\n",
        " 'spr_state',\n",
-       " 'spr_text']"
+       " 'spr_text',\n",
+       " 'year']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3158,64 +3149,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3c2453e8",
+   "execution_count": 14,
+   "id": "4060aa31",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        24.10.2017\n",
-       "1        24.10.2017\n",
-       "3        24.10.2017\n",
-       "5        24.10.2017\n",
-       "7        24.10.2017\n",
-       "            ...    \n",
-       "63680    25.06.2021\n",
-       "63682    25.06.2021\n",
-       "63684    25.06.2021\n",
-       "63686    25.06.2021\n",
-       "63688    25.06.2021\n",
-       "Name: text_date, Length: 34180, dtype: object"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bt_df.text_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4b544980",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-dbc004dcb9d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Prepare\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbt_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'doc_text'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnlp_sent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbt_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'spr_text'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\language.py\u001b[0m in \u001b[0;36mpipe\u001b[1;34m(self, texts, as_tuples, batch_size, disable, component_cfg, n_process)\u001b[0m\n\u001b[0;32m   1482\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mpipe\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpipes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1483\u001b[0m                 \u001b[0mdocs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1484\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdocs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1485\u001b[0m             \u001b[1;32myield\u001b[0m \u001b[0mdoc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1486\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\util.py\u001b[0m in \u001b[0;36m_pipe\u001b[1;34m(docs, proc, name, default_error_handler, kwargs)\u001b[0m\n\u001b[0;32m   1482\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_pipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault_error_handler\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1483\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"pipe\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1484\u001b[1;33m         \u001b[1;32myield\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mproc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1485\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1486\u001b[0m         \u001b[1;31m# We added some args for pipe that __call__ doesn't expect.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\pipeline\\pipe.pyx\u001b[0m in \u001b[0;36mpipe\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\util.py\u001b[0m in \u001b[0;36m_pipe\u001b[1;34m(docs, proc, name, default_error_handler, kwargs)\u001b[0m\n\u001b[0;32m   1482\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_pipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefault_error_handler\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1483\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"pipe\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1484\u001b[1;33m         \u001b[1;32myield\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mproc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1485\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1486\u001b[0m         \u001b[1;31m# We added some args for pipe that __call__ doesn't expect.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\pipeline\\transition_parser.pyx\u001b[0m in \u001b[0;36mpipe\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\pipeline\\transition_parser.pyx\u001b[0m in \u001b[0;36mspacy.pipeline.transition_parser.Parser.set_annotations\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\pipeline\\_parser_internals\\ner.pyx\u001b[0m in \u001b[0;36mspacy.pipeline._parser_internals.ner.BiluoPushDown.set_annotations\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\tokens\\doc.pyx\u001b[0m in \u001b[0;36mspacy.tokens.doc.Doc.set_ents\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\spacy\\tokens\\doc.pyx\u001b[0m in \u001b[0;36mspacy.tokens.doc.SetEntsDefault.values\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\enum.py\u001b[0m in \u001b[0;36m__members__\u001b[1;34m(cls)\u001b[0m\n\u001b[0;32m    396\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_member_names_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    397\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 398\u001b[1;33m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    399\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__members__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    400\u001b[0m         \"\"\"\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Prepare\n",
     "bt_df['doc_text'] = list(nlp_sent.pipe(bt_df['spr_text']))"
@@ -3223,8 +3160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b99c5eaa",
+   "execution_count": 15,
+   "id": "b25b67b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3234,21 +3171,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "997dd5ba",
+   "execution_count": 22,
+   "id": "38a48f65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt_df.describe()"
+    "# Get number of sentences\n",
+    "def get_sentences(x):\n",
+    "    sentences = [[token.text for token in sent] for sent in x.sents]\n",
+    "    return len(sentences)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a05277d",
+   "execution_count": 23,
+   "id": "efe156fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get number of sentences\n",
+    "bt_df['text_sents'] = bt_df['doc_text'].apply(lambda x: get_sentences(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b819fc08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>text_subid</th>\n",
+       "      <th>text_election_period</th>\n",
+       "      <th>text_session_nr</th>\n",
+       "      <th>spr_id</th>\n",
+       "      <th>spr_state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>text_tokens</th>\n",
+       "      <th>text_sents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>34180.000000</td>\n",
+       "      <td>34180.0</td>\n",
+       "      <td>34180.000000</td>\n",
+       "      <td>34180.0</td>\n",
+       "      <td>34180.000000</td>\n",
+       "      <td>3.418000e+04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34180.000000</td>\n",
+       "      <td>34180.000000</td>\n",
+       "      <td>34180.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>31886.402399</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.980164</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>124.904652</td>\n",
+       "      <td>5.981888e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019.330047</td>\n",
+       "      <td>480.328262</td>\n",
+       "      <td>25.594441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>18422.901569</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.095531</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>68.321166</td>\n",
+       "      <td>5.410550e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.093399</td>\n",
+       "      <td>388.029049</td>\n",
+       "      <td>20.331122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000e+04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>15977.500000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>1.100401e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018.000000</td>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>31847.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>1.100434e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019.000000</td>\n",
+       "      <td>499.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>47875.500000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>185.000000</td>\n",
+       "      <td>1.100476e+07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>733.000000</td>\n",
+       "      <td>39.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>63688.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>237.000000</td>\n",
+       "      <td>1.000000e+12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021.000000</td>\n",
+       "      <td>8273.000000</td>\n",
+       "      <td>377.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Unnamed: 0  Unnamed: 0.1    text_subid  text_election_period  \\\n",
+       "count  34180.000000       34180.0  34180.000000               34180.0   \n",
+       "mean   31886.402399           0.0      0.980164                  19.0   \n",
+       "std    18422.901569           0.0      2.095531                   0.0   \n",
+       "min        0.000000           0.0      0.000000                  19.0   \n",
+       "25%    15977.500000           0.0      0.000000                  19.0   \n",
+       "50%    31847.000000           0.0      0.000000                  19.0   \n",
+       "75%    47875.500000           0.0      2.000000                  19.0   \n",
+       "max    63688.000000           0.0     30.000000                  19.0   \n",
+       "\n",
+       "       text_session_nr        spr_id  spr_state          year   text_tokens  \\\n",
+       "count     34180.000000  3.418000e+04        0.0  34180.000000  34180.000000   \n",
+       "mean        124.904652  5.981888e+07        NaN   2019.330047    480.328262   \n",
+       "std          68.321166  5.410550e+09        NaN      1.093399    388.029049   \n",
+       "min           1.000000  1.000000e+04        NaN   2017.000000      1.000000   \n",
+       "25%          65.000000  1.100401e+07        NaN   2018.000000    124.000000   \n",
+       "50%         127.000000  1.100434e+07        NaN   2019.000000    499.000000   \n",
+       "75%         185.000000  1.100476e+07        NaN   2020.000000    733.000000   \n",
+       "max         237.000000  1.000000e+12        NaN   2021.000000   8273.000000   \n",
+       "\n",
+       "         text_sents  \n",
+       "count  34180.000000  \n",
+       "mean      25.594441  \n",
+       "std       20.331122  \n",
+       "min        1.000000  \n",
+       "25%        6.000000  \n",
+       "50%       26.000000  \n",
+       "75%       39.000000  \n",
+       "max      377.000000  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bt_df.describe()"
+   ]
   }
  ],
  "metadata": {
