--- a/Notebooks/Figure_Generator.ipynb
+++ b/Notebooks/Figure_Generator.ipynb
@@ -16956,6 +16956,83 @@
    "source": [
     "bt_df.text_subid.unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "963849a3",
+   "metadata": {},
+   "source": [
+    "# 3. NCCR DICT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6c36deeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate displacy\n",
+    "import spacy\n",
+    "from spacy import displacy\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "73e2b014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp_full = spacy.load('de_core_news_lg')\n",
+    "\n",
+    "doc = nlp_full('Die NPD hat das Thema in die Wahlkampfphase aufgenommen.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "119a3faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options= {'compact': True, \n",
+    "          'collapse_phrases': True,\n",
+    "         'font': 'computer modern'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3d13edba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4709"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svg = displacy.render(doc, style=\"dep\", options=options, jupyter=False)\n",
+    "\n",
+    "output_path = Path(\"./images/dependency_plot.svg\") # you can keep there only \"dependency_plot.svg\" if you want to save it in the same folder where you run the script \n",
+    "output_path.open(\"w\", encoding=\"utf-8\").write(svg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82b3ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
