--- a/Notebooks/Figure_Generator.ipynb
+++ b/Notebooks/Figure_Generator.ipynb
@@ -16967,7 +16967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "id": "6c36deeb",
    "metadata": {},
    "outputs": [],
@@ -16980,50 +16980,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "id": "73e2b014",
    "metadata": {},
    "outputs": [],
    "source": [
     "nlp_full = spacy.load('de_core_news_lg')\n",
     "\n",
-    "doc = nlp_full('Die NPD hat das Thema in die Wahlkampfphase aufgenommen.')\n"
+    "doc1 = nlp_full('Der Mann streichelt den Hund.')\n",
+    "\n",
+    "doc2 = nlp_full('Den Hund streichelt der Mann.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "id": "119a3faf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "options= {'compact': True, \n",
-    "          'collapse_phrases': True,\n",
-    "         'font': 'computer modern'}"
+    "options= {'collapse_phrases': True,  \n",
+    "          'font': 'computer modern',\n",
+    "          'arrow_stroke': 1,\n",
+    "         'arrow_width': 5}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "3d13edba",
+   "execution_count": 52,
+   "id": "300e4497",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4709"
+       "2213"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "svg = displacy.render(doc, style=\"dep\", options=options, jupyter=False)\n",
-    "\n",
-    "output_path = Path(\"./images/dependency_plot.svg\") # you can keep there only \"dependency_plot.svg\" if you want to save it in the same folder where you run the script \n",
-    "output_path.open(\"w\", encoding=\"utf-8\").write(svg)"
+    "svg = displacy.render(doc1, style=\"dep\", options=options, jupyter=False)\n",
+    "output_path = Path(\"./images/dependency_ex_1.svg\") # you can keep there only \"dependency_plot.svg\" if you want to save it in the same folder where you run the script \n",
+    "output_path.open(\"w\", encoding=\"utf-8\").write(svg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "74315a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2213"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svg = displacy.render(doc2, style=\"dep\", options=options, jupyter=False)\n",
+    "output_path = Path(\"./images/dependency_ex_2.svg\") # you can keep there only \"dependency_plot.svg\" if you want to save it in the same folder where you run the script \n",
+    "output_path.open(\"w\", encoding=\"utf-8\").write(svg)\n"
    ]
   },
   {
