--- a/Notebooks/Figure_Generator.ipynb
+++ b/Notebooks/Figure_Generator.ipynb
@@ -2398,7 +2398,7 @@
     "sns.set_style(\"white\")\n",
     "\n",
     "#plt.show()\n",
-    "plt.savefig('parties_nccr_df.svg')\n"
+    "plt.savefig('images/parties_nccr_df.svg')\n"
    ]
   },
   {
@@ -5705,7 +5705,7 @@
     "sns.set(rc = {'figure.figsize':(11,5)})\n",
     "sns.set_style(\"white\")\n",
     "\n",
-    "plt.savefig('parties_bt_df.svg')"
+    "plt.savefig('images/parties_bt_df.svg')"
    ]
   },
   {
@@ -16129,7 +16129,7 @@
     "sns.set_style(\"white\")\n",
     "\n",
     "#plt.show()\n",
-    "plt.savefig('length_speeches_bt_df.svg')"
+    "plt.savefig('images/length_speeches_bt_df.svg')"
    ]
   },
   {
