--- a/Notebooks/Interpretation and Error Analysis Label Models.ipynb
+++ b/Notebooks/Interpretation and Error Analysis Label Models.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, f1_score"
    ]
   },
   {
